SLLS-197 Enable dataflow bug detection for Python in connected mode